# gTestExample

./: CMakeLists.txt  Example.cpp  README.md
include/: Example.hpp
src/: Example.cpp  main.cpp
test/: CMakeLists.txt  ExampleTest.cpp
